--- a/RockPaperScisors/RockPaperScisors.csproj
+++ b/RockPaperScisors/RockPaperScisors.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="Mono.Posix" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
@@ -38,6 +39,7 @@
     <Compile Include="Player.cs" />
     <Compile Include="RPSModel.cs" />
     <Compile Include="RPSView.cs" />
+    <Compile Include="RPSController.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
